fixed spacing, added friend request axios calls

--- a/frontend/src/components/AuthorList.css
+++ b/frontend/src/components/AuthorList.css
@@ -1,6 +1,8 @@
 .StreamOfAuthors {
-    margin-left: 10%;
-    margin-right: 10%;
-    margin-top: 10%;
-    margin-bottom: 10%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-left: 20%;
+  margin-right: 20%;
 }
